--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,11 +1,11 @@
 steps:
   # Build the container image
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/$PROJECT_ID/jarvis-intelligence-service', '.']
+    args: ['build', '-t', 'gcr.io/$PROJECT_ID/jarvis-intelligence-service:latest', '.']
 
   # Push the container image to Container Registry
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/jarvis-intelligence-service']
+    args: ['push', 'gcr.io/$PROJECT_ID/jarvis-intelligence-service:latest']
 
   # Deploy container to Cloud Run
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
@@ -15,7 +15,7 @@ steps:
       - 'deploy'
       - 'jarvis-intelligence-service'
       - '--image'
-      - 'gcr.io/$PROJECT_ID/jarvis-intelligence-service'
+      - 'gcr.io/$PROJECT_ID/jarvis-intelligence-service:latest'
       - '--region'
       - 'asia-southeast1'
       - '--platform'
@@ -25,4 +25,4 @@ steps:
       - 'SUPABASE_URL=$_SUPABASE_URL,SUPABASE_KEY=$_SUPABASE_KEY,ANTHROPIC_API_KEY=$_ANTHROPIC_API_KEY'
 
 images:
-  - 'gcr.io/$PROJECT_ID/jarvis-intelligence-service'
+  - 'gcr.io/$PROJECT_ID/jarvis-intelligence-service:latest'
