feat: Add Documents feature for CV, profiles, applications storage
- Document extraction (PDF, Markdown, TXT, DOCX)
- REST API endpoints for upload, search, list, delete
- Chat tools: search_documents, get_document_content
- Memory seeding from document content
- Supabase migration for documents table

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,9 @@ pytz
 mem0ai
 qdrant-client
 openai  # For embeddings in Mem0
+
+# Document processing
+PyPDF2
+pdfplumber
+python-docx
+python-multipart  # For file uploads
