--- a/requirements.txt
+++ b/requirements.txt
@@ -8,10 +8,11 @@ httpx
 timezonefinder
 pytz
 
-# Memory layer
-mem0ai
-qdrant-client
-openai  # For embeddings in Mem0
+# Memory layer - now using Supabase natively, no external deps needed
+# Keeping mem0ai as optional fallback (can remove later)
+# mem0ai
+# qdrant-client
+# openai  # Not needed - using Supabase text search instead
 
 # Document processing
 PyPDF2
