Restore Mem0 with Supabase pgvector backend
- Reverted from naive Supabase text search back to Mem0
- Configured Mem0 to use Supabase pgvector for vector storage
- Uses OpenAI text-embedding-3-small for embeddings
- Keeps Anthropic Claude for memory extraction
- Fixed all routes and tools to use Mem0 interface
- Added extract_from_text method for Beeper memory seeding
- Restored mem0ai and openai in requirements.txt

Requires env vars: OPENAI_API_KEY, SUPABASE_DB_PASSWORD

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,11 +8,9 @@ httpx
 timezonefinder
 pytz
 
-# Memory layer - now using Supabase natively, no external deps needed
-# Keeping mem0ai as optional fallback (can remove later)
-# mem0ai
-# qdrant-client
-# openai  # Not needed - using Supabase text search instead
+# Memory layer - Mem0 with Supabase pgvector backend
+mem0ai
+openai  # Required for embeddings (text-embedding-3-small)
 
 # Document processing
 PyPDF2
