--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ pytz
 # Memory layer - Mem0 with Supabase pgvector backend
 mem0ai
 openai  # Required for embeddings (text-embedding-3-small)
+psycopg2-binary  # Required for pgvector PostgreSQL connection
 
 # Document processing
 PyPDF2
