--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -23,9 +23,9 @@ steps:
       - 'managed'
       - '--allow-unauthenticated'
       - '--update-secrets'
-      - 'SUPABASE_DB_PASSWORD=SUPABASE_DB_PASSWORD:latest,OPENAI_API_KEY=OPENAI_API_KEY:latest,ANTHROPIC_API_KEY=CLAUDE_API_KEY:latest'
+      - 'SUPABASE_DB_PASSWORD=SUPABASE_DB_PASSWORD:latest,OPENAI_API_KEY=OPENAI_API_KEY:latest,ANTHROPIC_API_KEY=CLAUDE_API_KEY:latest,LETTA_AGENT_ID=LETTA_AGENT_ID:latest'
       - '--set-env-vars'
-      - 'SUPABASE_URL=https://ojnllduebzfxqmiyinhx.supabase.co,SUPABASE_KEY=sb_secret_4jHJEMWEZBhsoKUFQDlX-A_5xANu0vQ,BEEPER_BRIDGE_URL=https://beeper.new-world-project.com,SYNC_SERVICE_URL=https://jarvis-sync-service-776871804948.asia-southeast1.run.app,TELEGRAM_BOT_URL=https://jarvis-telegram-bot-qkz4et4n4q-as.a.run.app,DEFAULT_TELEGRAM_CHAT_ID=7247716272'
+      - 'SUPABASE_URL=https://ojnllduebzfxqmiyinhx.supabase.co,SUPABASE_KEY=sb_secret_4jHJEMWEZBhsoKUFQDlX-A_5xANu0vQ,BEEPER_BRIDGE_URL=https://beeper.new-world-project.com,SYNC_SERVICE_URL=https://jarvis-sync-service-776871804948.asia-southeast1.run.app,TELEGRAM_BOT_URL=https://jarvis-telegram-bot-qkz4et4n4q-as.a.run.app,DEFAULT_TELEGRAM_CHAT_ID=7247716272,LETTA_URL=https://letta-server-776871804948.asia-southeast1.run.app'
 
 options:
   logging: CLOUD_LOGGING_ONLY
