--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,6 @@ PyPDF2
 pdfplumber
 python-docx
 python-multipart  # For file uploads
+# Service-to-service authentication (Cloud Run)
+requests
+google-auth  # For local dev identity token fallback
